# haystack-sonic

./: README.md  haystack_sonic.py  pyproject.toml  setup.py
haystack_sonic/: __init__.py  engine.py  search_engine.py  search_query.py
